--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,8 @@
     "es6": true,
     "browser": true
   },
-  "rules": {}
+  "rules": {
+    "arrow-body-style": "off",
+    "import/prefer-default-export": "off"
+  }
 }
