--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
   },
   "rules": {
     "arrow-body-style": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "object-curly-newline": "off",
+    "comma-dangle": "off",
+    "default-case": "off"
   }
 }
